--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
     />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
+    
+    
     <title>React Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="container">
+    <div id="root"></div></div>
    
   </body>
 </html>
