--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
       name="description"
       content="Weather application"
     />
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    
     <title>React Weather App</title>
+   
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
